--- a/css/style-info.css
+++ b/css/style-info.css
@@ -963,6 +963,9 @@ body {
   /* =========================
      PC ヘッダー
   ========================= */
+ /* =========================
+     PC用ヘッダー
+  ========================= */
   .pc-header {
     display: block;
     position: absolute;
@@ -1002,9 +1005,9 @@ body {
     gap: 32px;
   }
 
-  .curve-menu a {
+ .curve-menu a {
     font-family: "PaulaLily", sans-serif;
-    font-size: 17px;
+    font-size: 19.5px;
     font-weight: 700;
     color: #4e4c8f;
     white-space: nowrap;
@@ -1027,6 +1030,31 @@ body {
     border-radius: 10px;
     opacity: 0.8;
   }
+
+  /* メニューの縮小アニメ（画面幅対応） */
+    @media (max-width: 1500px) {
+        .curve-menu-wrap {
+            transform: translateX(-50%) scale(0.81);
+        }
+    }
+
+    @media (max-width: 1300px) {
+        .curve-menu-wrap {
+            transform: translateX(-50%) scale(0.76);
+        }
+    }
+
+    @media (max-width: 1100px) {
+        .curve-menu-wrap {
+            transform: translateX(-50%) scale(0.69);
+        }
+    }
+
+    @media (max-width: 950px) {
+        .curve-menu-wrap {
+            transform: translateX(-50%) scale(0.61);
+        }
+    }
 
   /* =========================
      アクセスマップ（PC）
