--- a/css/style-calendar.css
+++ b/css/style-calendar.css
@@ -21,7 +21,7 @@ body {
   font-family: "PaulaLily";
   font-style: normal;
   font-weight: bold;
-  src: url("../fonts/PaulaLily-B.ttf") format("truetype");
+  src: url("../fonts/PaulaLily-B.otf") format("truetype");
 }
 
 /* ===================================
