--- a/css/style-info.css
+++ b/css/style-info.css
@@ -38,7 +38,7 @@ body {
 @font-face {
   font-family: "PaulaLily";
   font-weight: 700;
-  src: url("../fonts/PaulaLily-B.ttf") format("truetype");
+  src: url("../fonts/PaulaLily-B.otf") format("truetype");
 }
 
 @font-face {
