--- a/css/style-phone.css
+++ b/css/style-phone.css
@@ -20,7 +20,7 @@ body {
     font-family: 'PaulaLily';
     font-style: normal;
     font-weight: bold;
-    src: url('../fonts/PaulaLily-B.ttf') format('truetype');
+    src: url('../fonts/PaulaLily-B.otf') format('truetype');
 }
 
 /* ===================================
