--- a/css/style-schedule.css
+++ b/css/style-schedule.css
@@ -22,7 +22,7 @@ body {
     font-family: 'PaulaLily';
     font-style: normal;
     font-weight: bold;
-    src: url('../fonts/PaulaLily-B.ttf') format('truetype');
+    src: url('../fonts/PaulaLily-B.otf') format('truetype');
 }
 
 /* ===================================
